# SELECT

./: .gitignore  pyproject.toml
.github/workflows/: daily-screener.yml
config/: screener.yaml
docs/: TAIWAN_STOCK_SCREENER.md
src/select_tw_screener/: __init__.py  backtest.py  cli.py  config.py  data_sources.py  pipeline.py  price_stage.py  scoring.py
tests/: test_backtest.py  test_screener.py
