[project]
name = "select-tw-stock-screener"
version = "0.1.0"
description = "Configurable Taiwan stock data ingestion, scoring, and recommendation pipeline."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "requests>=2.31",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
select-tw-update = "select_tw_screener.cli:main"
select-tw-backtest = "select_tw_screener.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
